--- a/admin.html
+++ b/admin.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>AdminLTE 2 | Log in</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-
     <script src="./build/angular/angular.js"></script>
+
+    <!--textAngular-->
+    <link rel='stylesheet' href='../../apps/static/plugins/textAngular/textAngular.css'>
+    <script src='../../apps/static/plugins/textAngular/textAngular-rangy.min.js'></script>
+    <script src='../../apps/static/plugins/textAngular/textAngular-sanitize.min.js'></script>
+    <script src='../../apps/static/plugins/textAngular/textAngular.min.js'></script>
+
+
     <script src="./build/angular/angular-route.min.js"></script>
     <script src="./build/config/product/config.js"></script>
     <script src="build/controllers/admin/app.js"></script>
