--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Log in</title>
+    <title>Swoole 文档</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
 
     <script src="./build/angular/angular.js"></script>
     <script src="./build/angular/angular-route.min.js"></script>
     <script src="./build/config/product/config.js"></script>
-    <script src="build/controllers/font/app_font.js"></script>
+    <script src="./build/controllers/font/app_font.js"></script>
     <script src="./build/angular/myDirective.js"></script>
 
 </head>
